# Yetx

./: .pre-commit-config.yaml  README.md  pyproject.toml  yetx_gui.spec
.github/workflows/: ci.yml
docs/: api.md  plugin_api.md
examples/: config.toml
tests/: test_session.py  test_web.py
yetx/core/: config.py  session.py
yetx/gui/: controller.py  main.py  main.qml
yetx/plugins/sample_plugin/: __init__.py
yetx/web/: app.py
